# polaris-plugins-official

./: .gitignore  LICENSE  README.md  README_zh.md  install.sh
.agents/plugins/: marketplace.json
.github/workflows/: release.yml
plugins/browser_use/: .mcp.json  ai-plugin.json  openapi.yaml  package-lock.json  package.json  requirements.txt  server.py
plugins/browser_use/.codex-plugin/: plugin.json
plugins/browser_use/skills/: browser-ops.md
plugins/browser_use/skills/browser-ops/: SKILL.md
plugins/browser_use/src/: index.js  main.py
plugins/computer_use/: .gitignore  .mcp.json  Cargo.toml  README.md  ai-plugin.json  draw_dot.py  openapi.yaml  package-lock.json  package.json  print_all_text.swift  requirements.txt  test_mcp_wechat.py  test_pynput.py  test_wechat.py
plugins/computer_use/.codex-plugin/: plugin.json
plugins/computer_use/skills/: computer-ops.md
plugins/computer_use/skills/computer-ops/: SKILL.md
plugins/computer_use/src/: index.ts  main.py  main.rs  utils.py
plugins/computer_use/src/adapters/chat/: wechat.py
plugins/knowledge_base/: .mcp.json  README.md  ai-plugin.json  go.mod  go.sum  main.go  openapi.yaml  package-lock.json  package.json
plugins/knowledge_base/.codex-plugin/: plugin.json
plugins/knowledge_base/skills/: knowledge-base-ops.md
plugins/knowledge_base/skills/knowledge-base-ops/: SKILL.md
plugins/knowledge_base/src/: index.ts  main.py
plugins/system_info/: .mcp.json  README.md
plugins/system_info/.codex-plugin/: plugin.json
plugins/system_info/skills/: system-info.md
plugins/system_info/src/: main.py
(+1 files in other folders)
